delete city and company data fromsso
