# internal/domain/models/user.go
@@ -11,11 +11,6 @@ type User struct {
 	SysRole string    `json:"role"`
 	Status  string    `json:"status"`
 
-	CityID      *uuid.UUID `json:"city_id,omitempty"`
-	CityRole    *string    `json:"city_role,omitempty"`
-	CompanyID   *uuid.UUID `json:"company_id,omitempty"`
-	CompanyRole *string    `json:"company_role,omitempty"`
-
 	Email     string    `json:"email"`
 	EmailVer  bool      `json:"email_verified"`
 	UpdatedAt time.Time `json:"updated_at"`
